Fixed background error
Fixed minor background color error on the signup page where the grey background sometimes would not cover the whole screen

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -58,7 +58,6 @@ code {
   align-items: stretch;
 }
 
-/*background-color: #284B63;*/
 .color-nav {
   background: rgb(32, 55, 70);
   background: linear-gradient(90deg,
@@ -183,7 +182,8 @@ code {
 
 .light-bg1 {
   background-color: #D9D9D9;
-  height: auto;
+  height: 100vh;
+  overflow-y: scroll;
 }
 
 .light-bg {
@@ -212,11 +212,3 @@ code {
 .bottom-padding {
   padding-bottom: 1.4%;
 }
-
-/* * {
-  overflow: hidden;
-}
-
-.scroll-overflow {
-  overflow: scroll;
-} */
